Fix Dark Mode

--- a/src/index.css
+++ b/src/index.css
@@ -67,24 +67,3 @@ body.dark {
     font-size: 40px;
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  body {
-    --color-background: #282828;
-    --color-text: #F9F9F9;
-    --primary: #2689d0;
-    --primary-light: #79abd0;
-    --primary-shade: #2775ab;
-    --secondary: #677684;
-    --secondary-light: #9cafbb;
-    --secondary-shade: #3f4854;
-    --tertiary: #383838;
-    --tertiary-light: rgba(45, 45, 45, 0.66);
-    --tertiary-dark: #dcdcdc;
-    --selected: #6AA2E32D;
-    --shadow: rgba(17, 20, 23, 0.2);
-    --image-grayscale: 10%;
-    --image-opacity: 90%;
-    --backdrop: rgba(19, 19, 19, 0.5);
-  }
-}
